<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LoginName">Login Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Switch">Enable Something</string>
    <string name="CheckBox">CheckBox</string>
    <string name="RadioButton">RadioButton</string>
    <string name="dialog_message">"Do you want to finish this activity?"</string>
    <string name="dialog_title">"Finish Activity"</string>
    <string name="Ok">"OK"</string>
    <string name="Cancel">"Cancel"</string>
    <string name="Send">"Send"</string>
    <string name="StartChat">Start Chat</string>
    <string name="weather_forecast">Weather Forecast</string>

</resources>
