<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrew.myapplication.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">


    <RadioButton
        android:text="@string/RadioButton" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_column="0" />

    <Switch
        android:text="@string/Switch" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_row="1"
        android:layout_column="0" />

    <CheckBox
        android:text="@string/CheckBox" 
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:id="@+id/imageButton2"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="fill" />



</GridLayout>
